<resources>
    <string name="app_name">Mi Barberia</string>
    <string name="id_value">Identificador</string>
    <string name="service_value">Servicio</string>
    <string name="gender_value">Genero</string>
    <string name="discount_value">Descuento</string>
    <string name="cost_value">Precio</string>
    <string name="button_load">Cargar</string>
    <string name="button_save">Guardar</string>
    <string name="id_hint">Ingrese el número del id</string>
    <string name="service_hint">Servicio</string>
    <string name="discount_hint">Descuento</string>
    <string name="gender_hint">Genero</string>
    <string name="cost_hint">Precio del Servicio</string>
</resources>